implemented first version of filters #3

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -11,6 +11,12 @@
   "page": {
     "message": "page"
   },
+  "filters": {
+    "message": "Filters"
+  },
+  "profession": {
+    "message": "Profession"
+  },
   "total_invited": {
     "message": "Total invited:"
   },
