--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -26,6 +26,9 @@
   "share_friends": {
     "message": "Поделитесь с друзьями:"
   },
+  "nothing_to_added": {
+    "message": "Ничего не найдено. Попробуйте изменить фильтры."
+  },
   "login": {
     "message": "Авторизуйтесь в"
   }
