--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -29,6 +29,9 @@
   "nothing_to_added": {
     "message": "Ничего не найдено. Попробуйте изменить фильтры."
   },
+  "have_avatar": {
+    "message": "Профиль с фото"
+  },
   "login": {
     "message": "Авторизуйтесь в"
   }
